# p533-rs

./: .gitignore  .gitmodules  LICENSE  README.md
crates/p372/: Cargo.toml
crates/p372/src/: lib.rs
crates/p533/: Cargo.toml
crates/p533/src/: between_7000km_and_9000km_util.rs  calculate_cp_parameters.rs  circuit_reliability_util.rs  constants.rs  e_layer_screening_frequency.rs  geometry.rs  initialize_path_util.rs  lib.rs  median_available_receiver_power_util.rs  median_skywave_field_strength_long_util.rs  median_skywave_field_strength_short_util.rs  muf_basic.rs  muf_operational.rs  muf_variability.rs  path_data.rs  read_ion_parameters.rs  read_p1239_util.rs
examples/: comprehensive.rs  simple.rs  technical.rs
tests/: compare_results.py  test_config.json  validate_implementation.sh
tests/c/: Makefile  c_reference_test.c
tests/rust/: generate_baseline.rs
