[package]
name = "p533"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p372 = { path = "../p372" }

[[example]]
name = "simple"
path = "../../examples/simple.rs"

[[example]]
name = "comprehensive"
path = "../../examples/comprehensive.rs"

[[example]]
name = "technical"
path = "../../examples/technical.rs"