[package]
name = "p533"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p372 = { path = "../p372" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[[example]]
name = "simple"
path = "../../examples/simple.rs"

[[example]]
name = "comprehensive"
path = "../../examples/comprehensive.rs"

[[example]]
name = "technical"
path = "../../examples/technical.rs"

[[bin]]
name = "generate_baseline"
path = "../../tests/rust/generate_baseline.rs"